external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_named_address_declaration.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_named_address_declaration.move:3:13
  │
3 │ address Addr;
  │             ^
  │             │
  │             Unexpected ';'
  │             Expected '{'
